--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     height: auto;
     margin: auto;
     background-color: #fff;
+    max-width: 95rem;
   }
 
   nav {
@@ -33,7 +34,7 @@ body {
     color: #000;
     font-size: 28px;
     font-family: sans-serif;
-    margin: 70px;
+    margin: 40px;
     justify-content: center;
   }
 
@@ -51,13 +52,13 @@ body {
   }
 
   #monstera {
-    font-size: 140px;
+    font-size: 100px;
     font-family: Verdana;
     margin-bottom: -20px;
   }
 
   #midWholePart1 {
-    font-size: 30px;
+    font-size: 22px;
     font-family: sans-serif;
     margin-top: 280px;
   }
@@ -69,65 +70,80 @@ body {
 #midWholePart121 {
     margin-left: 80px;
     color: #fff;
-    font-family: Arial;
+    font-family: sans-serif;
     background-color: rgb(77, 115, 77);
     border: none;
     border-radius: 70px;
-    padding: 1px 50px;
+    padding: 5px 45px;
     float: left;
-    margin-top: 45px ;
-    height: 140px;
+    margin-top: 40px;
+    height: 100px;
     border: none;
     }
 
 #midWholePart122 {
-margin-left: 340px;
-margin-top: -87px;
+margin-left: 250px;
+margin-top: -69px;
 }
 
 #midWholePart13 {
     font-size: 20px;
     display: flex;
     margin-top: 300px;
-    margin-left: 90px;
+    margin-left: 80px;
     flex-direction: row;
     justify-content: left;
     align-items: flex-start;
 }
 
 #feeding {
-  height: 80px;
+  height: 60px;
 }
 
 #feed-final {
-  margin-top: 15px;
-  line-height: 18px;
+  margin-top: 35px;
+  line-height: 15px;
+  margin-left: -20px;
   }
 
+#feed-final h4 {
+    font-size: 25px;
+    margin-bottom: 40px;
+    }
+
 #light {
-    height: 70px;
-    margin-left: 60px;
+    height: 50px;
+    margin-left: 50px;
 }
 
 #light-final {
-  margin-top: 26px;
-  margin-left: 20px;
-  line-height: 18px;
+  margin-top: 40px;
+  line-height: 15px;
+}
+
+#light-final h4 {
+  font-size: 25px;
+  margin-bottom: 40px;
 }
 
 #care {
-    height: 65px;
-    margin-left: 70px;
+    height: 50px;
+    margin-left: 50px;
 }
 
 #care-final {
-  margin-top: 28px;
-  margin-left: 40px;
-  line-height: 18px;
+  margin-top: 40px;
+  margin-left: 10px;
+  line-height: 15px;
+ }
+
+ #care-final h4 {
+  font-size: 25px;
+  margin-bottom: 40px;
  }
  
  .text {
-    font-size: 15px;
+    font-size: 12px;
     color: gray;
     font: bold;
     margin-left: 100px;
@@ -137,7 +153,7 @@ margin-top: -87px;
 #imgMain {
     float: right;
     margin-top: -900px;
-    height: 1000px;
+    height: 950px;
 }
 
 .midWholePart13Parts h4 {
